<resources>
    <string name="app_name" translatable="false">donations</string>

    <string name="donation_type_target" translatable="false">DonationTypeTarget</string>
    <string name="donation_type_regular" translatable="false">DonationTypeRegular</string>
    <string name="full_text" translatable="false">Привет-привет, добряш!\n\n

Я создал это событие, чтобы показать какие у меня прекрасные добряши и буду счастлив, если получится вдохновить кого-нибудь хотя бы на маленький перевод в пользу фонда Юна.
\n\n
◾ Если получится собрать 1 000 рублей, то это будет 5 обработанных животных от блох и клещей.
\n\n
◾ Собранные 5 000 рублей превратятся в 25 кг корма для подопечных фонда.
\n\n
◾ А 10 000 рублей позволят провести курс занятий с кинологом по социализации сложной собаки. Чтобы она легче нашла свой дом.
\n\n
В благотворительности не бывает маленьких сумм, поэтому если вы хотите помочь, то переведите любую сумму, будь-то 10 рублей или 1000 💚</string>
    <string name="snippet_header" translatable="false">Добряши помогают котикам</string>
    <string name="Matvey_author" translatable="false">Автор Матвей Правосудов</string>
    <string name="everyMonth" translatable="false">Помощь нужна каждый месяц</string>
    <string name="collect_in_september" translatable="false">Нужно собрать в сентябре</string>
    <string name="sum_is_collected" translatable="false">8 750 ₽</string>
    <string name="total_sum" translatable="false">10 000 ₽</string>
    <string name="num_of_like" translatable="false">65</string>
    <string name="num_of_comment" translatable="false">65</string>
    <string name="num_of_share" translatable="false">4</string>
    <string name="num_of_views" translatable="false">7,2K</string>
    <string name="todo" translatable="false">TODO</string>

    <string name="snippet_name">Name Surname</string>
    <string name="snippet_ending">5 days left</string>
    <string name="snippet_delimiter" translatable="false">•</string>
    <string name="snippet_help">Donate</string>
    <string name="snippet_collected">Collected 8 750 ₽ out of 10 000 ₽</string>


    <string name="main_placeholder_text">You have no fees yet.\nBegin a good one.</string>
    <string name="main_placeholder_button">Create fee</string>

    <string name="further" translatable="false">Далее</string>
    <string name="author" translatable="false">Автор</string>
    <string name="create_donation" translatable="false">Создать сбор</string>
    <string name="card_for_donation_text_view_hint" translatable="false">Куда получать деньги</string>
    <string name="donation_description_text_view_hint" translatable="false">Описание</string>
    <string name="donation_aim_text_view_hint" translatable="false">Цель</string>
    <string name="donation_sum_text_view_hint" translatable="false">Сумма, ₽</string>
    <string name="donation_name_text_view_hint" translatable="false">Название сбора</string>
    <string name="donation_description_edit_text_hint" translatable="false">На что пойдут деньги и как они кому-то помогут?</string>
    <string name="donation_aim_edit_text_hint" translatable="false">Например, лечение человека</string>
    <string name="donation_sum_edit_text_hint" translatable="false">Сколько нужно собрать</string>
    <string name="donation_name_edit_text_hint" translatable="false">Название сбора</string>
    <string name="upload_a_cover" translatable="false">Загрузить обложку</string>

    <string name="snippet_preview_collected">Be first to help</string>


    <string name="fee_deadline">Deadline</string>
    <string name="fee_deadline_full_sum_option">Until full sum</string>
    <string name="fee_deadline_certain_date_option">At certain date</string>
    <string name="fee_deadline_date">Date</string>
    <string name="fee_deadline_date_hint">Select date</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="time">5 min</string>
    <string name="name">Alex Mazeluk</string>
    <string name="zagluska">NextFragment</string>

</resources>