<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_snippet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/card"
    tools:visibility="visible">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cat_snippet"
        app:riv_corner_radius_top_left="12dp"
        app:riv_corner_radius_top_right="12dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/snippet_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snippet_header"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snippet_name"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/delimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snippet_delimiter"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/name" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snippet_ending"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/delimiter"
            app:layout_constraintTop_toTopOf="@id/name" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/donated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Собрано в * n *символ рубля*"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            app:layout_constraintTop_toBottomOf="@id/donated"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>