<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/VkFormLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/news_snippet"
        style="@style/VkCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/snippet_picture_height"
                android:scaleType="centerCrop"
                android:src="@drawable/cat_snippet" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/snippet_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginStart="@dimen/cardView_margin_start_end"
                android:layout_marginTop="@dimen/cardView_margin_top_bottom"
                android:layout_marginEnd="@dimen/cardView_margin_start_end"
                android:layout_marginBottom="@dimen/cardView_margin_top_bottom">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/snippet_header"
                    android:textColor="@color/black"
                    android:textSize="@dimen/snippet_header_textSize"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_name_to_delimiter"
                    android:text="@string/snippet_name"
                    android:textSize="@dimen/snippet_text_textSize"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header" />

                <TextView
                    android:id="@+id/text_delimiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_text_delimiter"
                    android:text="@string/snippet_delimiter"
                    android:textSize="@dimen/snippet_text_textSize"
                    app:layout_constraintStart_toEndOf="@id/name"
                    app:layout_constraintTop_toTopOf="@id/name" />

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_text_delimiter"
                    android:text="@string/snippet_ending"
                    android:textSize="@dimen/snippet_text_textSize"
                    app:layout_constraintStart_toEndOf="@id/text_delimiter"
                    app:layout_constraintTop_toTopOf="@id/name" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/separator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/donated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_delimiter_to_collected"
                    android:text="@string/snippet_preview_collected"
                    android:textColor="@color/black"
                    android:textSize="@dimen/snippet_collected_textSize"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/separator" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/VkProgressBar"
                    android:layout_width="270dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="32dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar_colors"
                    app:layout_constraintBottom_toBottomOf="@id/donate_button"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/donate_button"
                    style="@style/VkButtonOutlinedNotClickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="@dimen/padding_delimiter_to_collected"
                    android:clickable="false"
                    android:text="@string/snippet_help"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/progress_bar"
                    app:layout_constraintTop_toBottomOf="@+id/separator" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                style="@style/VkChip"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Видно всем"
                 />

            <com.google.android.material.chip.Chip
                style="@style/VkChip"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сейчас" />

            <com.google.android.material.chip.Chip
                style="@style/VkChip"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Тематика" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"/>

        <LinearLayout
            android:id="@+id/adding_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/oval"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="2dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_oval"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:text="A"/>

            <View
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:id="@+id/adding_picture"
                android:layout_margin="12dp"
                android:background="@drawable/ic_music_24"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_donation_preview___button___ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Всё" />


</LinearLayout>